--- a/src/common-ui/evm/evm-account-image/evm-account-image.component.scss
+++ b/src/common-ui/evm/evm-account-image/evm-account-image.component.scss
@@ -1,3 +1,8 @@
 .user-picture {
-  @include user-avatar;
+  &.normal {
+    @include user-avatar;
+  }
+  &.small {
+    @include user-avatar-small;
+  }
 }
