--- a/src/common-ui/evm/evm-address/evm-address.component.scss
+++ b/src/common-ui/evm/evm-address/evm-address.component.scss
@@ -1,7 +1,7 @@
 .value-content-horizontal {
   display: flex;
   align-items: center;
-  column-gap: 4px;
+  column-gap: 8px;
 
   .user-picture {
     @include user-avatar-small;
